--- a/style.css
+++ b/style.css
@@ -9,11 +9,17 @@ div {
   color: #E1624F;
   font-size: 16px;
   font-weight: bold;
-  line-height: 
+   
 }
 
 h1 {
  line-height: 8px;
- font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
- 
+ font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ color: #1B1B1B;
+
+}
+
+.Conheça img {
+ border-radius: 26px ;
+ margin: 119px;
 }
